--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10230,6 +10230,9 @@ selector[data-type="languages"][data-id="283692853"] > .active, .ls-sw-languages
     }
   }
 }
+.basic-hide{
+  display: none !important;
+}
 {%- if settings.custom_style != blank -%}
 /*================ _custom_styles ================*/
 {{ settings.custom_style }}
