--- a/snippets/a6-bh-radios.liquid
+++ b/snippets/a6-bh-radios.liquid
@@ -1,5 +1,4 @@
   <!-- custom input radio buttons -->
-
 	<div class="radio  product-single__form product-form__item">
 		<input type="radio" class="single-option-selector-{{ section.id }} "
 		{% if option.selected_value == value %} checked="checked"{% endif %} id="Quantity-1" name="quantity" value="1" min="1" class="product-form__input" pattern="[0-9]*">
@@ -8,38 +7,39 @@
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€39,00
+						€ 79,00 
 					</span>
 				</span>
-				<!--<span class="qb-original-price text-strike text-muted">
+			<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€45,00 
+						€ 79,00 
 					</span>
 				</span>
-				<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">22%</span>
+				<!--	<span class="badge qb-saved-amount">
+					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">25%</span>
 				</span>!-->
 			</span>
 		</label>
 		</div>
-	<div class="radio product-single__form product-form__item">
 
+		
+	<div class="radio product-single__form product-form__item">
 		<input type="radio" class="single-option-selector-{{ section.id }} "
 	id="Quantity-2" name="quantity" value="2" min="2" class="product-form__input" pattern="[0-9]*">
 		<label for="Quantity-2">{{ 'products.radios.radio-one' | t }} 2: 
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€35,00
+						€ 69,00 
 					</span>
 				</span>
 				<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€39,00
+						€ 79,00 
 					</span>
 				</span>
 				<!--<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">34%</span>
+					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">33%</span>
 				</span>!-->
 			</span>
 		</label>
@@ -47,20 +47,20 @@
 		<div class="radio product-single__form product-form__item">
 		<input type="radio" class="single-option-selector-{{ section.id }} "
 		id="Quantity-3" name="quantity" value="3" min="3" class="product-form__input" pattern="[0-9]*">
-		<label for="Quantity-3">{{ 'products.radios.radio-one' | t }} +3: 
+		<label for="Quantity-3">{{ 'products.radios.radio-one' | t }} 3+: 
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€29,00
+						€ 59,00 
 					</span>
 				</span>
 				<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€39,00
+						€ 79,00 
 					</span>
 				</span>
 				<!--<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }} <span class="money">41%</span>
+					{{ 'products.radios.radio-save-amount' | t }} <span class="money">42%</span>
 				</span>!-->
 			</span>
 		</label>
