--- a/snippets/a6-bh-radios.liquid
+++ b/snippets/a6-bh-radios.liquid
@@ -7,15 +7,15 @@
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€ 79,00 
+						€ 89,00 
 					</span>
 				</span>
-			<span class="qb-original-price text-strike text-muted">
+			<!--<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€ 79,00 
+						€ 89,00 
 					</span>
 				</span>
-				<!--	<span class="badge qb-saved-amount">
+					<span class="badge qb-saved-amount">
 					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">25%</span>
 				</span>!-->
 			</span>
@@ -30,12 +30,12 @@
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€ 69,00 
+						€ 79,00 
 					</span>
 				</span>
 				<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€ 79,00 
+						€ 89,00 
 					</span>
 				</span>
 				<!--<span class="badge qb-saved-amount">
@@ -51,12 +51,12 @@
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€ 59,00 
+						€ 69,00 
 					</span>
 				</span>
 				<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€ 79,00 
+						€ 89,00 
 					</span>
 				</span>
 				<!--<span class="badge qb-saved-amount">
