--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10091,21 +10091,24 @@ selector[data-type="languages"][data-id="283692853"].ls-sw-all > .active .ls-ico
   }
 }
 
+.ls-sw-languages{
+  display: none !important;
+}
 
-selector[data-type="languages"][data-id="283692853"] > .active, .ls-sw-languages-283692853 > .active {
-  padding:4px 5px !important;
-  border: 1px solid rgba(233,233,234,0.5) !important;
-  @include screen($small){
-    max-width: 60px;
-  }
-  }
-  selector[data-type="languages"][data-id="283692853"] > .active:after, .ls-sw-languages-283692853 > .active:after {
-  transform: rotate(-45deg) !important;
-  right: 15px !important;
-  }
-  selector[data-type="languages"][data-id="283692853"].ls-sw-closed > .active:after, .ls-sw-languages-283692853.ls-sw-closed > .active:after{
-    transform: rotate(135deg)!important;
-  }
+// selector[data-type="languages"][data-id="283692853"] > .active, .ls-sw-languages-283692853 > .active {
+//   padding:4px 5px !important;
+//   border: 1px solid rgba(233,233,234,0.5) !important;
+//   @include screen($small){
+//     max-width: 60px;
+//   }
+//   }
+//   selector[data-type="languages"][data-id="283692853"] > .active:after, .ls-sw-languages-283692853 > .active:after {
+//   transform: rotate(-45deg) !important;
+//   right: 15px !important;
+//   }
+//   selector[data-type="languages"][data-id="283692853"].ls-sw-closed > .active:after, .ls-sw-languages-283692853.ls-sw-closed > .active:after{
+//     transform: rotate(135deg)!important;
+//   }
 
   
 .card.tab.fp-item{
