added topbar icons but not yet finished

--- a/sections/announcement.liquid
+++ b/sections/announcement.liquid
@@ -15,49 +15,30 @@
         data-autoplayspeed="{{ section.settings.announcement_autoplayspeed | times: 1000 }}" >
         {%- for block in section.blocks -%}
 
-        {%- unless block.settings.announcement_end_text == blank -%}
-        <div class="announcement-end-text hide"> 
-        {{ block.settings.announcement_end_text }}
-      </div>
-      {%- endunless -%} 
-      {%- unless block.settings.announcement_end_text_fr == blank -%}
-      <div class="announcement-end-text_fr hide"> 
-      {{ block.settings.announcement_end_text_fr }}
-    </div>
-    {%- endunless -%} 
-
+            {%- unless block.settings.announcement_end_text == blank -%}
+            <div class="announcement-end-text hide"> 
+              {{ block.settings.announcement_end_text }}
+            </div>
+          {%- endunless -%} 
+{%- comment -%}
         <a id="ann_counter__wrapper" href="{%- if block.settings.announcement_link != blank -%}{{ block.settings.announcement_link }} {%- else -%} / {%- endif -%} " class="announcement-message-item announcement-{{ block.id }}  flex justify-center align-center" {{ block.shopify_attributes }} data-announcement-date="{{ block.settings.announcement_counter}}">
-      
-            {%- if block.settings.announcement_text or block.settings.announcement_text_fr != blank -%}
-                {%- if shop.locale == 'nl'-%}
+      {%- endcomment -%}
+            {%- if block.settings.announcement_text != blank -%}
                 <div class="announcement-message"> 
                   {{ block.settings.announcement_text }}
                 </div>
-              {%- else -%}
-              <div class="announcement-message_fr"> 
-                {{ block.settings.announcement_text_fr }}
-              </div>
-              {%- endif -%}
+    
             {%- endif -%}
 
             {%- unless block.settings.announcement_counter == blank -%}
-                  {% if shop.locale == 'nl' %}
                 <div id="announcement_counter_nl" class="announcement_counter  flex justify-start align-center">
                   <!-- <div class="announcement_number"><span class="digit">10</span><span class="announcement_text">D<span class="hide-small">ays</span></span></div>
                   <div class="announcement_number"><span class="digit">23</span><span class="announcement_text">H<span class="hide-small">ours</span></span></div>
                   <div class="announcement_number"><span class="digit">03</span><span class="announcement_text">M<span class="hide-small">inuttes</span></span></div>
                   <div class="announcement_number"><span class="digit">45</span><span class="announcement_text">S<span class="hide-small">econds</span></span></div> -->
                 </div>
-                {% else %}
-                <div id="announcement_counter_fr" class="announcement_counter  flex justify-start align-center">
-                  <!-- <div class="announcement_number"><span class="digit">10</span><span class="announcement_text">D<span class="hide-small">ays</span></span></div>
-                  <div class="announcement_number"><span class="digit">23</span><span class="announcement_text">H<span class="hide-small">ours</span></span></div>
-                  <div class="announcement_number"><span class="digit">03</span><span class="announcement_text">M<span class="hide-small">inuttes</span></span></div>
-                  <div class="announcement_number"><span class="digit">45</span><span class="announcement_text">S<span class="hide-small">econds</span></span></div> -->
-                </div>
-                {% endif %} 
             {%- endunless-%}
-        </a>
+      {%- comment -%}</a>{%- endcomment -%}  
         {%- endfor -%}
       </div>
 
@@ -157,10 +138,52 @@
             "default": "<p>Free shipping worldwide | 30-Day free returns</p>"
           },
           {
-            "type": "richtext",
-            "id": "announcement_text_fr",
-            "label": "Text for FR",
-            "default": "<p>Free shipping worldwide | 30-Day free returns</p>"
+            "type": "select",
+            "id": "icon_selector",
+            "label": "Select icon",
+            "options": [
+              {
+                "value": "none",
+                "label": "None"
+              },
+              {
+                "value": "truck",
+                "label": "Truck"
+              },
+              {
+                "value": "checkmark",
+                "label": "Checkmark"
+              },
+              {
+                "value": "return",
+                "label": "Return"
+              },
+              {
+                "value": "smily",
+                "label": "Smily"
+              },
+              {
+                "value": "discount",
+                "label": "Discount"
+              },
+              {
+                "value": "cards",
+                "label": "Cards"
+              },
+              {
+                "value": "heart",
+                "label": "Customer service"
+              },
+              {
+                "value": "headphones",
+                "label": "Customer service headphones"
+              },
+              {
+                "value": "star",
+                "label": "Star"
+              }
+            ],
+            "default": "none"
           },
           {
             "type": "text",
@@ -177,12 +200,6 @@
             "type": "richtext",
             "id": "announcement_end_text",
             "label": "Add text when counter ends",
-            "default": "<p>Enjoy our crazy discounts on <strong>Black Days</strong></p>"
-          },
-          {
-            "type": "richtext",
-            "id": "announcement_end_text_fr",
-            "label": "Add text when counter ends for FR",
             "default": "<p>Enjoy our crazy discounts on <strong>Black Days</strong></p>"
           }
         ]
