--- a/snippets/a3-posture-shirt-radios.liquid
+++ b/snippets/a3-posture-shirt-radios.liquid
@@ -4,50 +4,7 @@
 		<input type="radio" class="single-option-selector-{{ section.id }} "
 		{% if option.selected_value == value %} checked="checked"{% endif %} id="Quantity-1" name="quantity" value="1" min="1" class="product-form__input" pattern="[0-9]*">
 
-		<label for="Quantity-1">{{ 'products.radios.radio-one' | t }} 1: 
-			<span class="qb-radio text-money">
-				<span class="qb-discounted-price on-sale text-sale">
-					<span class="money">
-						€99,00
-					</span>
-				</span>
-				<!--<span class="qb-original-price text-strike text-muted">
-					<span class="money">
-						€99,00 
-					</span>
-				</span>
-				<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">27%</span>
-				</span>!-->
-			</span>
-		</label>
-		</div>
-
-	<div class="radio product-single__form product-form__item">
-		<input type="radio" class="single-option-selector-{{ section.id }} "
-	id="Quantity-2" name="quantity" value="2" min="2" class="product-form__input" pattern="[0-9]*">
-		<label for="Quantity-2">{{ 'products.radios.radio-one' | t }} 2: 
-			<span class="qb-radio text-money">
-				<span class="qb-discounted-price on-sale text-sale">
-					<span class="money">
-						€89,00
-					</span>
-				</span>
-				<span class="qb-original-price text-strike text-muted">
-					<span class="money">
-						€99,00
-					</span>
-				</span>
-				<!--<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">33%</span>
-				</span>!-->
-			</span>
-		</label>
-	</div>
-		<div class="radio product-single__form product-form__item">
-		<input type="radio" class="single-option-selector-{{ section.id }} "
-		id="Quantity-3" name="quantity" value="3" min="3" class="product-form__input" pattern="[0-9]*">
-		<label for="Quantity-3">{{ 'products.radios.radio-one' | t }} +3: 
+		<label for="Quantity-1">{{ 'products.radios.radio-one' | t }} (1) Single-pack: 
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
@@ -56,12 +13,55 @@
 				</span>
 				<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€99,00
+						€109,00 
 					</span>
 				</span>
-				<!--<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }} <span class="money">40%</span>
-				</span>!-->
+				<span class="badge qb-saved-amount">
+					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€30,00</span>
+				</span>
+			</span>
+		</label>
+		</div>
+
+	<div class="radio product-single__form product-form__item">
+		<input type="radio" class="single-option-selector-{{ section.id }} "
+	id="Quantity-2" name="quantity" value="2" min="2" class="product-form__input" pattern="[0-9]*">
+		<label for="Quantity-2">{{ 'products.radios.radio-one' | t }} (2) Duo-pack: 
+			<span class="qb-radio text-money">
+				<span class="qb-discounted-price on-sale text-sale">
+					<span class="money">
+						€150,00
+					</span>
+				</span>
+				<span class="qb-original-price text-strike text-muted">
+					<span class="money">
+						€218,00
+					</span>
+				</span>
+				<span class="badge qb-saved-amount">
+					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€68,00</span>
+				</span>
+			</span>
+		</label>
+	</div>
+		<div class="radio product-single__form product-form__item">
+		<input type="radio" class="single-option-selector-{{ section.id }} "
+		id="Quantity-3" name="quantity" value="3" min="3" class="product-form__input" pattern="[0-9]*">
+		<label for="Quantity-3">{{ 'products.radios.radio-one' | t }} (3) Triple-pack: 
+			<span class="qb-radio text-money">
+				<span class="qb-discounted-price on-sale text-sale">
+					<span class="money">
+						€207,00
+					</span>
+				</span>
+				<span class="qb-original-price text-strike text-muted">
+					<span class="money">
+						€327,00
+					</span>
+				</span>
+				<span class="badge qb-saved-amount">
+					{{ 'products.radios.radio-save-amount' | t }} <span class="money">€120,00</span>
+				</span>
 			</span>
 		</label>
 	</div>
