--- a/snippets/a6-bh-radios.liquid
+++ b/snippets/a6-bh-radios.liquid
@@ -3,21 +3,21 @@
 		<input type="radio" class="single-option-selector-{{ section.id }} "
 		{% if option.selected_value == value %} checked="checked"{% endif %} id="Quantity-1" name="quantity" value="1" min="1" class="product-form__input" pattern="[0-9]*">
 
-		<label for="Quantity-1">{{ 'products.radios.radio-one' | t }} 1: 
+		<label for="Quantity-1">{{ 'products.radios.radio-one' | t }} (1) Single-pack: 
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
+					<span class="money">
+						€ 59,00 
+					</span>
+				</span>
+			<span class="qb-original-price text-strike text-muted">
 					<span class="money">
 						€ 79,00 
 					</span>
 				</span>
-			<!--<span class="qb-original-price text-strike text-muted">
-					<span class="money">
-						€ 89,00 
-					</span>
-				</span>
 					<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">25%</span>
-				</span>!-->
+					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€20,00</span>
+				</span>
 			</span>
 		</label>
 		</div>
@@ -26,42 +26,42 @@
 	<div class="radio product-single__form product-form__item">
 		<input type="radio" class="single-option-selector-{{ section.id }} "
 	id="Quantity-2" name="quantity" value="2" min="2" class="product-form__input" pattern="[0-9]*">
-		<label for="Quantity-2">{{ 'products.radios.radio-one' | t }} 2: 
+		<label for="Quantity-2">{{ 'products.radios.radio-one' | t }} (2) Duo-pack: 
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€ 69,00 
+						€ 110,00 
 					</span>
 				</span>
 				<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€ 79,00 
+						€ 158,00 
 					</span>
 				</span>
-				<!--<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">33%</span>
-				</span>!-->
+				<span class="badge qb-saved-amount">
+					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€48,00</span>
+				</span>
 			</span>
 		</label>
 	</div>
 		<div class="radio product-single__form product-form__item">
 		<input type="radio" class="single-option-selector-{{ section.id }} "
 		id="Quantity-3" name="quantity" value="3" min="3" class="product-form__input" pattern="[0-9]*">
-		<label for="Quantity-3">{{ 'products.radios.radio-one' | t }} 3+: 
+		<label for="Quantity-3">{{ 'products.radios.radio-one' | t }} (3) Triple-pack: 
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€ 59,00 
+						€ 147,00 
 					</span>
 				</span>
 				<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€ 79,00 
+						€ 237,00 
 					</span>
 				</span>
-				<!--<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }} <span class="money">42%</span>
-				</span>!-->
+				<span class="badge qb-saved-amount">
+					{{ 'products.radios.radio-save-amount' | t }} <span class="money">€90,00</span>
+				</span>
 			</span>
 		</label>
 	</div>
