added radio modifications and amount saved hidden

--- a/snippets/a5-backbrace-radios.liquid
+++ b/snippets/a5-backbrace-radios.liquid
@@ -16,9 +16,11 @@
 						€49,00 
 					</span>
 				</span>
+				{%- comment -%}
 				<span class="badge qb-saved-amount">
 					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€10,00</span>
 				</span>
+				{%- endcomment -%}
 			</span>
 		</label>
 		</div>
@@ -30,17 +32,19 @@
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€70,00
+						€69,00
 					</span>
 				</span>
 				<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€98,00
+						€98,00 
 					</span>
 				</span>
+				{%- comment -%}
 				<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€28,00</span>
+					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€29,00</span>
 				</span>
+				{%- endcomment -%}
 			</span>
 		</label>
 	</div>
@@ -51,17 +55,19 @@
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€87,00
+						€89,00
 					</span>
 				</span>
 				<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€147,00
+						€147,00 
 					</span>
 				</span>
+				{%- comment -%}
 				<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }} <span class="money">€60,00</span>
+					{{ 'products.radios.radio-save-amount' | t }} <span class="money">€58,00</span>
 				</span>
+				{%- endcomment -%}
 			</span>
 		</label>
 	</div>
