total saving script deleted and radio prices modified

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -270,6 +270,17 @@
 <script src="//code.tidio.co/vpzcrknf873i0cg3y6bbggk1sbo4bsmz.js" async></script> 
 <!-- End of Tidio script -->
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MXQPWM67RQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MXQPWM67RQ');
+</script>
+
+
 <!-- Start of Sleeknote signup and lead generation tool - www.sleeknote.com -->
 <script id="sleeknoteScript" type="text/javascript">
 	(function () {
