--- a/snippets/a3-posture-shirt-radios.liquid
+++ b/snippets/a3-posture-shirt-radios.liquid
@@ -1,25 +1,29 @@
   <!-- custom input radio buttons -->
+
 	<div class="radio  product-single__form product-form__item">
 		<input type="radio" class="single-option-selector-{{ section.id }} "
 		{% if option.selected_value == value %} checked="checked"{% endif %} id="Quantity-1" name="quantity" value="1" min="1" class="product-form__input" pattern="[0-9]*">
+
 		<label for="Quantity-1">{{ 'products.radios.radio-one' | t }} (1) Single-pack: 
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€59,00
+						€109,00
 					</span>
 				</span>
-				<span class="qb-original-price text-strike text-muted">
+				<!--<span class="qb-original-price text-strike text-muted">
 					<span class="money">
 						€109,00 
 					</span>
 				</span>
 				<span class="badge qb-saved-amount">
 					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€50,00</span>
-				</span>
+				</span>!-->
+		
 			</span>
 		</label>
 		</div>
+
 	<div class="radio product-single__form product-form__item">
 		<input type="radio" class="single-option-selector-{{ section.id }} "
 	id="Quantity-2" name="quantity" value="2" min="2" class="product-form__input" pattern="[0-9]*">
@@ -27,7 +31,7 @@
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€109,00
+						€199,00
 					</span>
 				</span>
 				<span class="qb-original-price text-strike text-muted">
@@ -36,8 +40,9 @@
 					</span>
 				</span>
 				<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€109,00</span>
+					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€19,00</span>
 				</span>
+		
 			</span>
 		</label>
 	</div>
@@ -48,7 +53,7 @@
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€149,00
+						€279,00
 					</span>
 				</span>
 				<span class="qb-original-price text-strike text-muted">
@@ -57,8 +62,9 @@
 					</span>
 				</span>
 				<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }} <span class="money">€178,00</span>
-				</span>	
+					{{ 'products.radios.radio-save-amount' | t }} <span class="money">€48,00</span>
+				</span>
+		
 			</span>
 		</label>
 	</div>
