--- a/snippets/a4-premium-brace-radios.liquid
+++ b/snippets/a4-premium-brace-radios.liquid
@@ -1,22 +1,25 @@
   <!-- custom input radio buttons -->
+
 	<div class="radio  product-single__form product-form__item">
 		<input type="radio" class="single-option-selector-{{ section.id }} "
 		{% if option.selected_value == value %} checked="checked"{% endif %} id="Quantity-1" name="quantity" value="1" min="1" class="product-form__input" pattern="[0-9]*">
+
 		<label for="Quantity-1">{{ 'products.radios.radio-one' | t }} (1) Single-pack: 
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€49,00
+						€79,00
 					</span>
 				</span>
-				<span class="qb-original-price text-strike text-muted">
+				<!--<span class="qb-original-price text-strike text-muted">
 					<span class="money">
 						€79,00 
 					</span>
 				</span>
 				<span class="badge qb-saved-amount">
 					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€30,00</span>
-				</span>
+				</span>!-->
+		
 			</span>
 		</label>
 		</div>
@@ -27,7 +30,7 @@
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€89,00
+						€139,00
 					</span>
 				</span>
 				<span class="qb-original-price text-strike text-muted">
@@ -36,8 +39,9 @@
 					</span>
 				</span>
 				<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€69,00</span>
+					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€19,00</span>
 				</span>
+		
 			</span>
 		</label>
 	</div>
@@ -48,7 +52,7 @@
 			<span class="qb-radio text-money">
 				<span class="qb-discounted-price on-sale text-sale">
 					<span class="money">
-						€129,00
+						€189,00
 					</span>
 				</span>
 				<span class="qb-original-price text-strike text-muted">
@@ -57,8 +61,9 @@
 					</span>
 				</span>
 				<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }} <span class="money">€108,00</span>
+					{{ 'products.radios.radio-save-amount' | t }} <span class="money">€48,00</span>
 				</span>
+		
 			</span>
 		</label>
 	</div>
