Mint posture shirt removed from radio list

--- a/snippets/a2-comfort-plus-radios.liquid
+++ b/snippets/a2-comfort-plus-radios.liquid
@@ -11,14 +11,14 @@
 						€39,00
 					</span>
 				</span>
-				<!--<span class="qb-original-price text-strike text-muted">
+				<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€49,00 
+						€45,00 
 					</span>
 				</span>
 				<span class="badge qb-saved-amount">
 					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€20,00</span>
-				</span>!-->
+				</span>
 			</span>
 		</label>
 		</div>
@@ -35,11 +35,11 @@
 				</span>
 				<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€78,00 
+						€90,00 
 					</span>
 				</span>
 				<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€9,00</span>
+					{{ 'products.radios.radio-save-amount' | t }}  <span class="money">€21,00</span>
 				</span>
 			</span>
 		</label>
@@ -56,11 +56,11 @@
 				</span>
 				<span class="qb-original-price text-strike text-muted">
 					<span class="money">
-						€117,00 
+						€135,00 
 					</span>
 				</span>
 				<span class="badge qb-saved-amount">
-					{{ 'products.radios.radio-save-amount' | t }} <span class="money">€22,00</span>
+					{{ 'products.radios.radio-save-amount' | t }} <span class="money">€40,00</span>
 				</span>
 			</span>
 		</label>
